bevy_utility_ai/tests/ui/target_selector_multiple_inputs.stderr
error: Expected only one argument
 --> tests/ui/target_selector_multiple_inputs.rs:4:23
  |
4 | fn my_target_selector(q_a: Query<A>, q_a: Query<B>) -> Vec<Entity> {
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
